# mini_engine

./: .gitignore  CMakeCache.txt  CMakeLists.txt  LICENSE  README.md
src/core/: Time.h  engine.cpp  engine.h  entry_point.cpp  mini_window.h
